syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.naming;

message RegisterRequest {
  string service = 1; //always turmas
  string host = 2;
  int32 port = 3;
  repeated string qualifiers = 4;
}

message RegisterResponse {
}

message DeleteRequest {
  string service = 1;
  string host = 2;
  int32 port = 3;
}
message DeleteResponse {

}

message LookupRequest {
  string service = 1;
  repeated string qualifiers = 2;
}

message LookupResponse {
  string host = 1;
  int32 port = 2;
  bool available = 3;
}


service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
}